# diffobserver

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: render_dump.rs
scripts/: release.sh
src/: app.rs  config.rs  lib.rs  main.rs  watch.rs  worker.rs
src/core/: baseline.rs  diff.rs  excludes.rs  mod.rs  model.rs  repo.rs  scan.rs  snapshot.rs
src/ui/: diffview.rs  highlight.rs  mod.rs  theme.rs  tree.rs
tests/: integration.rs
