[package]
name = "diffobserver"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
anyhow = "1.0.102"
dirs = "6.0.0"
gix = { version = "0.84.0", default-features = false, features = ["sha1", "parallel"] }
ignore = "0.4.26"
notify-debouncer-full = "0.7.0"
ratatui = "0.29"
serde = { version = "1.0.228", features = ["derive"] }
similar = { version = "3.1.1", features = ["inline", "unicode"] }
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }
toml = "1.1.2"
unicode-width = "=0.2.0"
